--- a/CSS_Projects_10_Padding/Index.html
+++ b/CSS_Projects_10_Padding/Index.html
@@ -45,7 +45,7 @@ Dolayısıyla, bir öğenin belirli bir genişliği varsa, o öğeye eklenen dol
 
         /* Eğer biz içeriğin dışarıya doğru boyutu ne olursa olsun değişmesin istiyorsak boxsizing özelliğini kullanabiliriz. Böylelikle ilgili div'e 300px verildiyse ne kadar padding değeri verirsek verelim değişmemesini sağlayabiliriz. Burada içerik alanı daralacağını göz önünde bulundurarak değerler vermekte fayda vardır*/
 
-        /* box-sizing: border-box; */
+        box-sizing: border-box;
         
     }
 
